[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy-zenrows"
dynamic = ["version"]
description = "A Scrapy middleware for accessing ZenRows Scraper API with minimal setup."
readme = "scrapy_zenrows/README.md"
license = "MIT"
authors = [
    {name = "Idowu Omisola and Yuvraj Chandra", email = "support@zenrows.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Framework :: Scrapy",
]
requires-python = ">=3.8"
dependencies = [
    "scrapy>=2.0",
]

[project.urls]
Homepage = "https://github.com/ZenRows/scrapy-zenrows-middleware"
Documentation = "https://docs.zenrows.com/scraping-api/integrations/scrapy"
Repository = "https://github.com/ZenRows/scrapy-zenrows-middleware"

[tool.setuptools.dynamic]
version = {attr = "scrapy_zenrows.__version__.__version__"}

[tool.setuptools.packages.find]
include = ["scrapy_zenrows*"]

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 200

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by line-length)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "SIM108", # use ternary operator instead of if-else
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["scrapy_zenrows"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require real API key)",
    "slow: marks tests as slow (make real API calls)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["scrapy_zenrows"]
branch = true
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
